# aladin-redirects

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
etc/nginx/sites-available/: README.md  go
etc/systemd/system/: README.md  aladin-redirects.service
log/: README.md
static/js/: frontend.js
templates/: base.html  inst.html
