[tool.poetry]
name = "aladin-redirects"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
blinker = "^1.8.2"
certifi = "^2025.1.31"
click = "^8.2.1"
distlib = "^0.4.0"
enum34 = "^1.1.10"
filelock = "^3.16.1"
flask = "^3.1.1"
gunicorn = "^23.0.0"
importlib-metadata = "^8.5.0"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.5"
markupsafe = "^3.0.2"
packaging = "^25.0"
pipenv = "^2025.0.2"
platformdirs = "^4.3.6"
virtualenv = "^20.34.0"
virtualenv-clone = "^0.5.7"
werkzeug = "^3.0.6"
zipp = "^3.20.2"
setuptools = "^80.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
